WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56222
A window remains frozen if web process crashes during printing
https://bugs.webkit.org/show_bug.cgi?id=56222
Summary
A window remains frozen if web process crashes during printing
Alexey Proskuryakov
Reported
2011-03-11 13:51:27 PST
It can still be closed, but user experience is quite weird. We should reset autodisplay, but currently cannot, because ether is no page.
Attachments
proposed fix
(8.27 KB, patch)
2011-03-11 13:55 PST
,
Alexey Proskuryakov
sam
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(8.24 KB, patch)
2011-03-11 14:10 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-03-11 13:55:15 PST
Created
attachment 85528
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2011-03-11 14:10:31 PST
Created
attachment 85531
[details]
patch for landing ASSERT(isMainThread()) that I added was incorrect.
WebKit Commit Bot
Comment 3
2011-03-11 16:25:42 PST
Comment on
attachment 85531
[details]
patch for landing Clearing flags on attachment: 85531 Committed
r80901
: <
http://trac.webkit.org/changeset/80901
>
WebKit Commit Bot
Comment 4
2011-03-11 16:25:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug