Source/WebKit2/UIProcess/API/mac/PageClientImpl.mm
@@ -372,18 +372,6 @@ void PageClientImpl::setComplexTextInputEnabled(uint64_t pluginComplexTextInputI
     [m_wkView _setComplexTextInputEnabled:complexTextInputEnabled pluginComplexTextInputIdentifier:pluginComplexTextInputIdentifier];
 }
 
-void PageClientImpl::setAutodisplay(bool newState)
-{
-    if (!newState && [[m_wkView window] isAutodisplay])
-        [m_wkView displayIfNeeded];
-    
-    [[m_wkView window] setAutodisplay:newState];
-
-    // For some reason, painting doesn't happen for a long time without this call, <rdar://problem/8975229>.
-    if (newState)
-        [m_wkView displayIfNeeded];
-}
-
 CGContextRef PageClientImpl::containingWindowGraphicsContext()
 {
     NSWindow *window = [m_wkView window];
