Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -2819,11 +2819,6 @@ void WebPageProxy::setComplexTextInputEnabled(uint64_t pluginComplexTextInputIde
 {
     m_pageClient->setComplexTextInputEnabled(pluginComplexTextInputIdentifier, complexTextInputEnabled);
 }
-
-void WebPageProxy::setAutodisplay(bool newState)
-{
-    m_pageClient->setAutodisplay(newState);
-}
 #endif
 
 void WebPageProxy::backForwardRemovedItem(uint64_t itemID)
